.metadata/.plugins/org.eclipse.cdt.ui/PerceptronCPP.build.log
16:52:17 **** Build of configuration Debug for project PerceptronCPP ****
make all 
Building file: ../main.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.cpp"
../main.cpp: In function ‘std::vector<point> fill(std::__cxx11::string)’:
../main.cpp:27:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i = 0; i < tokens.size(); i++){
                   ^
../main.cpp:38:20: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
   for(int k = 0; k < line.size(); k++){
                    ^
../main.cpp:51:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i = 0; i < temp.size(); i++){
                   ^
../main.cpp:69:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
../main.cpp: In function ‘int main()’:
../main.cpp:84:19: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
  for(int i = 0; i < tempLines.size(); i++){
                   ^
../main.cpp:90:7: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
  for (auto& row : matrix) {
       ^
../main.cpp:90:13: error: ISO C++ forbids declaration of ‘row’ with no type [-fpermissive]
  for (auto& row : matrix) {
             ^
../main.cpp:90:19: warning: range-based ‘for’ loops only available with -std=c++11 or -std=gnu++11
  for (auto& row : matrix) {
                   ^
../main.cpp:91:12: warning: ‘auto’ changes meaning in C++11; please remove it [-Wc++0x-compat]
       for (auto& elem : row) {
            ^
../main.cpp:91:18: error: ISO C++ forbids declaration of ‘elem’ with no type [-fpermissive]
       for (auto& elem : row) {
                  ^
../main.cpp:91:25: warning: range-based ‘for’ loops only available with -std=c++11 or -std=gnu++11
       for (auto& elem : row) {
                         ^
../main.cpp:92:28: error: request for member ‘x’ in ‘elem’, which is of non-class type ‘int’
          std::cout << elem.x;
                            ^
make: *** [main.o] Error 1
subdir.mk:18: recipe for target 'main.o' failed

16:52:18 Build Finished (took 212ms)

